@@ -12,6 +12,7 @@ Backward compatibility for multibyte string functions - CHANGED
 Facebook login will not redirect back to add listing page - FIXED
 Fix conflict Advanced Custom Fields timepicker - FIXED
 Isle of Man added as own country and regions fixed - FIXED
+Option added to disable overwrite by Yoast SEO titles & metas on GD pages - ADDED
 
 v1.6.17
 Changes for batch WPML duplicates feature - CHANGED
